--- a/_sass/_sidebar.scss
+++ b/_sass/_sidebar.scss
@@ -90,12 +90,12 @@
   }
 
   img {
-    max-width: 175px;
-    border-radius: 50%;
+    max-width: 500px;  //175px
+    border-radius: 0%; //50%
 
     @include breakpoint($large) {
       padding: 5px;
-      border: 1px solid $border-color;
+      border: 0px solid $border-color; // 1px
     }
   }
 }
